--- a/src/main/resources/application_ja.properties
+++ b/src/main/resources/application_ja.properties
@@ -227,6 +227,7 @@ labels.customerCode=\u9867\u5ba2\u30b3\u30fc\u30c9
 labels.deliveryProcessCategory=\u5b8c\u7d0d\u533a\u5206
 labels.Category=\u5206\u985e
 labels.and=\u304b\u3064
+labels.applyDate=\u9069\u7528\u5e74\u6708\u65e5
 
 #\u5546\u54c1\u60c5\u5831
 labels.poLot=\u767a\u6ce8\u30ed\u30c3\u30c8
@@ -1241,6 +1242,7 @@ confirm.master.taxrate.back=\u7a0e\u533a\u5206\u4e00\u89a7\u753b\u9762\u306b\u62
 confirm.master.productclass.back=\u5546\u54c1\u5206\u985e\u691c\u7d22\u753b\u9762\u306b\u623b\u308a\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 confirm.master.rate.back=\u30ec\u30fc\u30c8\u691c\u7d22\u753b\u9762\u306b\u623b\u308a\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 confirm.master.customerrank.back=\u9867\u5ba2\u30e9\u30f3\u30af\u691c\u7d22\u753b\u9762\u306b\u623b\u308a\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
+confirm.master.customerretailprice.back=\u9867\u5ba2\u5225\u5358\u4fa1\u691c\u7d22\u753b\u9762\u306b\u623b\u308a\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 confirm.master.bank.back=\u9280\u884c\u691c\u7d22\u753b\u9762\u306b\u623b\u308a\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 confirm.exec={0}\u3092\u5b9f\u884c\u3057\u3066\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 confirm.newrecord=\u5909\u66f4\u3092\u7834\u68c4\u3057\u3066\u65b0\u898f\u767b\u9332\u753b\u9762\u3092\u958b\u304d\u307e\u3059\u3002\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
