--- a/src/main/resources/application_ja.properties
+++ b/src/main/resources/application_ja.properties
@@ -1307,6 +1307,7 @@ errors.userPassword.already.exists=\u904e\u53bb({0}\u56de\u524d\u307e\u3067)\u30
 errors.userPassword.length=\u30d1\u30b9\u30ef\u30fc\u30c9\u306f{0}\u6841\u4ee5\u4e0a\u3067\u8a2d\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 errors.userPassword.passwordCharType2=\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u534a\u89d2\u82f1\u6570\u5b57\u3067\u8a2d\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 errors.userPassword.passwordCharType3=\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u534a\u89d2\u82f1\u6570\u8a18\u53f7\u3067\u8a2d\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+errors.customerretailprice.already.exists=\u9867\u5ba2\u5225\u5358\u4fa1\u304c\u65e2\u306b\u5b58\u5728\u3057\u307e\u3059\u3002
 
 
 errors.productclass.already.exists=\u5546\u54c1\u5206\u985e\u304c\u65e2\u306b\u5b58\u5728\u3057\u307e\u3059\u3002
